# Process-Sanskrit

./: .gitignore  2024-10-08_14-55-45.json  Dockerfile  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  dbTest.py  processAPI.py  processJupyter.ipynb  processNew.py  processSanskrit.py  processSanskritBase.py  processSanskritCleaned.py  processSanskritFast.py  processSanskritTest.py  processSanskritwithSplit.py  psycogtest.py  psycopg2test.py  pyproject.toml  runBenchmarks.py  setup.py  test.ipynb
Books/raw_books/: pradipika.txt
functions/: SQLiteFind.py  cleanResults.py  compoundAnalysis.py  dictionaryLookup.py  enhancedSandhiSplitter.py  hybridSplitter.py  inflect.py  model_inference.py  rootAnyWord.py  rootAnyWordBackup.py  sandhiSplitScorer.py
legacy/: herokuDbconfig.py  preprocess.py  root_any_list.py  simpleSandhiSplitter.py
models/chronbmm_sanskrit5-multitask/: config.json  generation_config.json
oldVersions/: processSanskritBase.py  processSanskritFast.py  processSanskritTest.py
process_books/: process_boja_sarit.py
process_sanskrit/: __init__.py
process_sanskrit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
process_sanskrit/functions/: SQLiteFind.py  __init__.py  cleanResults.py  compoundAnalysis.py  dictionaryLookup.py  (+11 more)
resources/: MWkeysOnlySLP1.json  compoundList.txt  mwab_inputEdited.txt  mwsources.csv  type_map.xlsx
testing/: debuggingVersions.py  processCompounds.py  testCases.py  yogaSutra.py
tests/: BYT5test.py  runBenchmarks.py  ysTest.py
utils/: lexicalResources.py  parserObject.py  processAPI.py  transliterationUtils.py
(+12 files in other folders)
