[build-system]
requires = ["setuptools>=42", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "process-sanskrit"
version = "1.0.0"
description = "A package for processing Sanskrit, including dictionaries"
readme = "README.md"
authors = [
    {name = "Giacomo De Luca", email = "your_email@example.com"}
]
requires-python = ">=3.8"
urls = {Repository = "https://github.com/Giacomo-De-Luca/Process-Sanskrit"}
dependencies = [
    "requests>=2.20",
    "sqlalchemy>=1.4.0",
    "pandas>=1.0.0",
    "indic_transliteration>=2.0.0",
    "regex>=2022.0.0",
    "python-dotenv>=0.19.0",
    "sanskrit_parser>=0.1.1",
    "gensim>=4.0.0",
    "sentencepiece>=0.1.95",
]

[project.optional-dependencies]
api = [
    "flask>=2.0.0",
    "flask_cors>=3.0.0",
    "openai>=0.27.0",
]
byt5 = [
    "torch>=1.9.0",
    "transformers>=4.5.0",
]
sandhi = [
    "sanskrit_parser>=0.1.1",
]
scoring = [
    "gensim>=4.0.0",
    "sentencepiece>=0.1.95",
]
all = [
    "flask>=2.0.0",
    "flask_cors>=3.0.0",
    "openai>=0.27.0",
    "torch>=1.9.0",
    "transformers>=4.5.0",
    "sanskrit_parser>=0.1.1",
    "gensim>=4.0.0",
    "sentencepiece>=0.1.95",
]

[project.scripts]
update-ps-database = "process_sanskrit.setup.updateDB:update_database"